Separate Tox environment for linting code and tests

--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pylint,py36
+envlist = pylint,pylint-tests,py36
 skipsdist = true
 
 [testenv]
@@ -14,6 +14,12 @@ envdir = {toxworkdir}/py36
 
 commands =
     pylint {{cookiecutter.project_slug}} --rcfile=.pylintrc
+
+[testenv:pylint-tests]
+basepython = python3.6
+envdir = {toxworkdir}/py36
+
+commands =
     pylint tests --rcfile=.pylintrc-tests
 
 [testenv:py36]
