--- a/{{cookiecutter.project_slug}}/.coveragerc
+++ b/{{cookiecutter.project_slug}}/.coveragerc
@@ -4,5 +4,7 @@ branch = true
 parallel = true
 
 [report]
-exclude_lines = def __repr__
+exclude_lines =
+    def __repr__
+    pragma: no cover
 fail_under = 100
